# fastapi-tf-serving

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/classifier/: cifar10.py
app/loaders/: cifar10_classifier.py
app/routers/: model_predict.py  predict.py
models/: k49_model.h5  kmnist_model.h5
notebooks/: cifar10_image_classification.ipynb
