[project]
name = ""
version = "1.0"
description = "FastAPI for serving Tensorflow Models"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi>=0.115.4,<1.0",
    "uvicorn>=0.32.0,<1.0",
    "httpx>=0.27.2,<1.0",
    "pillow>=11.0.0,<12.0",
    "h5py>=3.12.1,<4.0",
    "tensorflow-aarch64>=2.16.1,<3.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "tensorflow-cpu>=2.16.1,<3.0;     sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tensorflow-macos>=2.16.1,<3.0;   sys_platform == 'darwin'",
]

[dependency-groups]
test = [
    "pytest>=8.3.3,<9.0"
]

dev = [
    "jupyterlab>=4.3.0", 
    "ruff>=0.7.3"
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
